Closed
Bug 343365
Opened 19 years ago
Closed 19 years ago
BeOS suffered bustage by fix to bug 333613, same as OS/2
Categories
(Core Graveyard :: GFX: BeOS, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: doug, Unassigned)
Details
(Keywords: fixed1.8.1)
Attachments
(1 file)
1.98 KB,
patch
|
mtschrep
:
approval1.8.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (BeOS; U; BeOS BePC; en-US; rv:1.9a1) Gecko/20060630 Minefield/3.0a1
Build Identifier: Mozilla/5.0 (BeOS; U; BeOS BePC; en-US; rv:1.9a1) Gecko/20060630 Minefield/3.0a1
BeOS will not build from Firefox 2.0 branch in current form. Need attached patch.
Reproducible: Always
Reporter | ||
Comment 1•19 years ago
|
||
Attachment #227851 -
Flags: review?(sergei_d)
Attachment #227851 -
Flags: approval1.8.1?
Comment 2•19 years ago
|
||
Comment on attachment 227851 [details] [diff] [review]
beos-only change
r=sergei_d,
but to remove at checkin that
already outcommented
//NS_IMETHODIMP
Attachment #227851 -
Flags: review?(sergei_d) → review+
Updated•19 years ago
|
Assignee: nobody → beos
Component: General → GFX: BeOS
Flags: review+
Product: Firefox → Core
QA Contact: general → timeless
Version: unspecified → 1.8 Branch
Updated•19 years ago
|
Attachment #227851 -
Flags: approval1.8.1? → approval1.8.1+
Comment 3•19 years ago
|
||
Is it MOZILLA_1_8_BRANCH tag?
Reporter | ||
Comment 4•19 years ago
|
||
(In reply to comment #3)
> Is it MOZILLA_1_8_BRANCH tag?
>
Yes, I believe that's it.
Comment 5•19 years ago
|
||
Checking in mozilla/gfx/src/beos/nsRenderingContextBeOS.cpp;
/cvsroot/mozilla/gfx/src/beos/nsRenderingContextBeOS.cpp,v <-- nsRenderingContextBeOS.cpp
new revision: 1.51.12.3; previous revision: 1.51.12.2
done
Checking in mozilla/gfx/src/beos/nsRenderingContextBeOS.h;
/cvsroot/mozilla/gfx/src/beos/nsRenderingContextBeOS.h,v <-- nsRenderingContextBeOS.h
new revision: 1.28.12.1; previous revision: 1.28
done
Comment 6•19 years ago
|
||
wondering who can put "verified1.8.1" here, as we are no-tier platform :)
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•