Bug 343365, BeOS suffered bustage by fix to bug 333613, same as OS/2, p=doug@sheltonfamily.org, r=sergei_d, approval1.8.1+=mtschrep, BeOS-only